[gd_scene load_steps=5 format=3 uid="uid://dcca63bmubtv8"]

[ext_resource type="Script" uid="uid://d4nh850pr267d" path="res://scripts/ui/OrderSlot.gd" id="1_l2n1l"]
[ext_resource type="Texture2D" uid="uid://cvf6cmbxma8l6" path="res://assets/textures/crops/carrot_icon.png" id="2_1x6e3"]
[ext_resource type="Texture2D" uid="uid://bb4r1mosdf8mb" path="res://assets/textures/crops/tomato_icon.png" id="3_e1y3u"]
[ext_resource type="PackedScene" uid="uid://8e5d0gghaeji" path="res://scenes/ui/CropItem.tscn" id="4_lj3l8"]

[node name="OrderSlot" type="MarginContainer"]
custom_minimum_size = Vector2(200, 120)
offset_right = 200.0
offset_bottom = 120.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_l2n1l")
carrot_icon = ExtResource("2_1x6e3")
tomato_icon = ExtResource("3_e1y3u")
crop_item_scene = ExtResource("4_lj3l8")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TimerProgress" type="ProgressBar" parent="Panel/VBoxContainer"]
modulate = Color(0.2, 0.8, 0.2, 1)
custom_minimum_size = Vector2(0, 6)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="OrderDisplay" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="OrderIcon" type="TextureRect" parent="Panel/VBoxContainer/OrderDisplay"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5

[node name="CropsContainer" type="GridContainer" parent="Panel/VBoxContainer/OrderDisplay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 2
columns = 3
